# E-Commerce-Product-Recommendation-System-using-RAG

./: .env  .env.example  .gitignore  DESIGN_DECISIONS.md  README.md  final_test_rag.py  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/services/: document_processor.py  qa_service.py  vector_store.py
docs/: RAG_QA_System_PRD.md  RAG_QA_TASK_LIST.md
uploads/: test_rag_document.txt
